[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-phantom-mcp"
version = "0.1.0"
description = "MCP server for Phantom Resume — cross-device AI session portability with TIBET provenance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
]
keywords = ["mcp", "tibet", "phantom", "ai-sessions", "provenance", "cross-device", "humotica"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-phantom-mcp"
Documentation = "https://humotica.com"
Issues = "https://github.com/Humotica/tibet-phantom-mcp/issues"

[project.scripts]
tibet-phantom-mcp = "tibet_phantom_mcp.server:main"
